--- a/src/main/resources/assets/plexielmod/lang/en_us.json
+++ b/src/main/resources/assets/plexielmod/lang/en_us.json
@@ -36,6 +36,7 @@
   "advancements.plexore.descr": "PLEXORE!!!",
   "subtitles.mii_challenge": "",
   "advancements.craftlecasque_plexra.title": "Advancement Casque en Plexra",
+  "advancements.advancement_discobloc.title": "Créer un bloc disco",
   "subtitles.plexi_armor_equip": "",
   "itemGroup.tabplexielmod": "plexielmod",
   "advancements.advancement_supercompactplexrablock.descr": "SUPER LIBÉREUR DE PLACE!",
@@ -61,7 +62,6 @@
   "advancements.advancement_3_plexraboss.descr": "Il m\u0027en faut plus pour mourire",
   "advancements.advancementcraftplexrasword.descr": "L\u0027épée ULTIME!!",
   "item.plexielmod.plexra_axe": "Plexra Axe",
-  "item.plexielmod.plexiel_dimensionmod": "Dimension Plexiel Mod",
   "advancements.advancementplexrapickaxe.descr": "La pioche ULTIME!!",
   "advancements.advancementplexrapickaxe.title": "Advancement pioche en Plexra",
   "advancements.advancement_2_plexraboss.descr": "JE REVIENDRAIS!",
@@ -74,7 +74,9 @@
   "advancements.advancement_5_plexraboss.descr": "MHAHAHAHA",
   "advancements.advancementplexraleggins.title": "Advancement Pantalon en Plexra",
   "advancements.plexieldimensionallumeur.descr": "Advancement PLEXRAORE À L\u0027INFINI!!!",
+  "advancements.advancement_discobloc.descr": "Pour la décoration bloc par Alicia and charlie",
   "advancements.plexore.title": "Advancement Plexore",
+  "block.plexielmod.discobloc": "Discobloc",
   "item.plexielmod.plexrabow": "Arc Plexra",
   "subtitles.fuze_roulette_paladienne": "",
   "enchantment.plexielmod.lifesteal": "Lifesteal",
