--- a/src/main/resources/assets/plexielmod/lang/en_us.json
+++ b/src/main/resources/assets/plexielmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.plexielmod.plexi_armor_leggings": "Plexi Armor Leggings",
+  "item.plexielmod.plexrabackpack": "Plexrabackpack",
   "biome.plexielmod.plexieldimensionbiome": "Plexieldimensionbiome",
   "advancements.advancementplexrabow_1.descr": "Tireur dans l\u0027ame!",
   "advancements.advancement_plexrashovel.title": "Advancement Pelle en Plexra!",
@@ -31,6 +32,7 @@
   "advancements.advancement_1_plexraboss.descr": "Même pas mal :)",
   "block.plexielmod.plexrablock": "Plexrablock",
   "item.plexielmod.plexrafood": "Plexra Food",
+  "advancements.advancement_plexrabackpack.descr": "Backpack en Plexra!! (en développement)",
   "item.plexielmod.plexi_armor_helmet": "Plexi Armor helmet",
   "advancements.plexore.descr": "PLEXORE!!!",
   "subtitles.mii_challenge": "",
@@ -72,6 +74,7 @@
   "advancements.advancement_compact_plexrablock.descr": "Faire beaucoup de place dans l\u0027invertaire!",
   "advancements.advancement_5_plexraboss.descr": "MHAHAHAHA",
   "advancements.advancementplexraleggins.title": "Advancement Pantalon en Plexra",
+  "advancements.advancement_plexrabackpack.title": "Backpack en Plexra!!",
   "advancements.plexieldimensionallumeur.descr": "Advancement PLEXRAORE À L\u0027INFINI!!!",
   "advancements.advancement_discobloc.descr": "Pour la décoration bloc par Alicia and charlie",
   "advancements.plexore.title": "Advancement Plexore",
